--- a/assets/css/styles-small.css
+++ b/assets/css/styles-small.css
@@ -1,3 +1,11 @@
 h1 {
   color: green;
 }
+body {
+  font-size: 1.0em;
+}
+article {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
