--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,14 @@
 h1 {
   color: fuchsia;
 }
+
+.container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+
+.chart {
+    width: 100%;
+}
